# ds-projects

./: .gitignore  README.md  VSCODE_SETUP.md  pyproject.toml
data/: README.md
notebooks/: .gitkeep  00_basic_data_exploration.ipynb  01_ml_tutorial_iris.ipynb  02_ml_tutorial_regression.ipynb  03_spatial_analysis_california_housing.ipynb
r-notebooks/: .Rprofile  01_bayesian_decision_theory.qmd  02_multivariate_bayesian_decision_theory.qmd  03_ml_bayesian_decision_theory.qmd  GETTING_STARTED.md  README.md  setup_renv.R
results/: .gitkeep
scripts/: .gitkeep
