[project]
name = "ds-projects"
version = "0.1.0"
description = "Data science projects collection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "plotly>=5.14.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
